fix: canvas is too high and goes under the breadcrumb footer

--- a/packages/silex-lib/src/css/_variables.scss
+++ b/packages/silex-lib/src/css/_variables.scss
@@ -38,4 +38,5 @@ $fontFamily: 'Ubuntu', sans-serif;
   --lighterPrimaryColor: #{$lighterPrimaryColor};
   --viewsPanelWidth: #{$viewsPanelWidth};
   --viewsProjectPanelWidth: #{$viewsProjectPanelWidth};
+  --footerHeight: #{$footerHeight};
 }
